Initialized search page

--- a/search/index.html
+++ b/search/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram</title>
-  </head>
-  <body>
-    Busca
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram</title>
+  <link rel="shortcut icon" href="../assets/icon/favicon.ico" />
+  <link rel="stylesheet" href="../styles/css/pages/search.css" />
+</head>
+
+<body>
+  <header>
+    <div class="search-bar">
+      <input type="text" placeholder="Search">
+      <img class="code-icon" src="../assets/icon/code-img.png" alt="code-icon">
+    </div>
+
+    <div class="search-categories">
+      <button><img class="categories-icon" src="../assets/icon/igtv-icon.png" alt="igtv-icon">IGTV</button>
+      <button><img class="categories-icon" src="../assets/icon/shop-icon.png" alt="shop-icon">Shop</button>
+      <button>Style</button>
+      <button>Sports</button>
+      <button>Auto</button>
+    </div>
+  </header>
+
+  <main>
+    <section class="feed-container">
+      <img class="story-img" src="https://picsum.photos/124/119?random=1" alt="story image">
+      <img class="story-img" src="https://picsum.photos/124/119?random=1" alt="story image">
+      <img class="story-img" src="https://picsum.photos/124/119?random=1" alt="story image">
+    </section>
+  </main>
+
+  <section class="tab-bar">
+    <a href="#"><img src="../assets/icon/home-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/search-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/like-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/user-icon.png" class="action-icon" alt="" /></a>
+  </section>
+</body>
+
 </html>
