--- a/search/index.html
+++ b/search/index.html
@@ -27,14 +27,29 @@
 
   <main>
     <section class="feed-container">
-      <img class="story-img" src="https://picsum.photos/124/119?random=1" alt="story image">
-      <img class="story-img" src="https://picsum.photos/124/119?random=1" alt="story image">
-      <img class="story-img" src="https://picsum.photos/124/119?random=1" alt="story image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
     </section>
   </main>
 
   <section class="tab-bar">
-    <a href="#"><img src="../assets/icon/home-icon.png" class="action-icon" alt="" /></a>
+    <a href="../home/index.html"><img src="../assets/icon/home-icon.png" class="action-icon" alt="" /></a>
     <a href="#"><img src="../assets/icon/search-icon.png" class="action-icon" alt="" /></a>
     <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="" /></a>
     <a href="#"><img src="../assets/icon/like-icon.png" class="action-icon" alt="" /></a>
