--- a/likes/index.html
+++ b/likes/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram</title>
-  </head>
-  <body>
-    Curtidas
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram</title>
+  <link rel="shortcut icon" href="../assets/icon/favicon.ico" />
+  <link rel="stylesheet" href="../styles/css/pages/likes.css" />
+</head>
+
+<body>
+  <header>
+    <div class="like-header">
+      <span>Following</span>
+      <span>You</span>
+    </div>
+    <div class="follow-req">
+      <span>Follow Requests</span>
+    </div>
+  </header>
+
+  <main>
+    <section class="like-container">
+
+      <div class="like-container">
+        <div class="new-like">
+          <span>New</span>
+          <div>
+            <div class="like">
+              <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+              <div>
+                <div class="name-user">lucaslomeu</div> liked your photo
+              </div>
+            </div>
+            <img class="like-img" src="https://picsum.photos/44/44?random=1" alt="feed image">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="today-like">
+        aa
+      </div>
+
+      <div class="week-like">
+
+      </div>
+    </section>
+  </main>
+
+  <section class="tab-bar">
+    <a href="../home/index.html"><img src="../assets/icon/home-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/search-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/like-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/user-icon.png" class="action-icon" alt="" /></a>
+  </section>
+</body>
+
 </html>
