--- a/profile/index.html
+++ b/profile/index.html
@@ -1,11 +1,173 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram</title>
-  </head>
-  <body>
-    Perfil
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram</title>
+  <link rel="shortcut icon" href="../assets/icon/favicon.ico" />
+  <link rel="stylesheet" href="../styles/css/pages/likes.css" />
+</head>
+
+<body>
+  <header>
+    <div class="like-header">
+      <span>Following</span>
+      <span>You</span>
+    </div>
+    <div class="follow-req">
+      <span>Follow Requests</span>
+    </div>
+  </header>
+
+  <main>
+    <section class="container">
+
+      <div class="like-container">
+        <div class="like-box">
+          <span class="title-box">New</span>
+          <div>
+            <div class="like">
+              <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+              <div class="text-box">
+                <div class="name-user">lomeu</div>liked your photo. <div class="time-like">10s</div>
+              </div>
+            </div>
+            <img class="like-img" src="https://picsum.photos/44/44?random=1" alt="feed image">
+          </div>
+        </div>
+
+        <div class="today-like">
+          <div class="like-box">
+            <span class="title-box">Today</span>
+            <div>
+              <div class="like">
+                <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+                <div class="text-box">
+                  <div class="name-user">lomeu, joao123</div> and <div class="name-user2">maria456</div>liked your
+                  photo.
+                  <span class="time-like">1h</span>
+                </div>
+              </div>
+              <img class="like-img" src="https://picsum.photos/44/44?random=1" alt="feed image">
+            </div>
+          </div>
+        </div>
+
+        <div class="week-like">
+          <div class="like-box">
+            <span class="title-box">This Week</span>
+            <div class="week-container">
+
+              <div>
+                <div class="like">
+                  <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+                  <div class="text-box">
+                    <div class="name-user">lomeu</div>mentioned you in a comment: @jacob_w exactly...<div
+                      class="time-like">
+                      1h</div>
+                  </div>
+                </div>
+              </div>
+              <img class="like-img" src="https://picsum.photos/44/44?random=1" alt="feed image">
+
+              <div class="like">
+                <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+                <div class="text-box">
+                  <div class="name-user">lomeu</div>liked your photo.<div class="time-like">1h</div>
+                </div>
+              </div>
+              <button class="btn-msg">Message</button>
+
+              <div>
+                <div class="like">
+                  <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+                  <div class="text-box">
+                    <div class="name-user">lomeu</div>started following you. <div class="time-like">3h</div>
+                  </div>
+                </div>
+              </div>
+              <button class="btn-msg">Message</button>
+
+              <div>
+                <div class="like">
+                  <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+                  <div class="text-box">
+                    <div class="name-user">lomeu</div>started following you. <div class="time-like">1d</div>
+                  </div>
+                </div>
+              </div>
+              <button class="btn-follow">Follow</button>
+              <div>
+                <div class="like">
+                  <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+                  <div class="text-box">
+                    <div class="name-user">lomeu</div>started following you. <div class="time-like">1d</div>
+                  </div>
+                </div>
+              </div>
+              <button class="btn-follow">Follow</button>
+              <div>
+                <div class="like">
+                  <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+                  <div class="text-box">
+                    <div class="name-user">lomeu</div>started following you. <div class="time-like">1d</div>
+                  </div>
+                </div>
+              </div>
+              <button class="btn-follow">Follow</button>
+              <div>
+                <div class="like">
+                  <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+                  <div class="text-box">
+                    <div class="name-user">lomeu</div>started following you. <div class="time-like">1d</div>
+                  </div>
+                </div>
+              </div>
+              <button class="btn-follow">Follow</button>
+              <div>
+                <div class="like">
+                  <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+                  <div class="text-box">
+                    <div class="name-user">lomeu</div>started following you. <div class="time-like">1d</div>
+                  </div>
+                </div>
+              </div>
+              <button class="btn-follow">Follow</button>
+              <div>
+                <div class="like">
+                  <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+                  <div class="text-box">
+                    <div class="name-user">lomeu</div>started following you. <div class="time-like">1d</div>
+                  </div>
+                </div>
+              </div>
+              <button class="btn-follow">Follow</button>
+              <div>
+                <div class="like">
+                  <img class="userlike-img" src="https://picsum.photos/44/4?random=1" alt="feed image">
+                  <div class="text-box">
+                    <div class="name-user">lomeu</div>started following you. <div class="time-like">1d</div>
+                  </div>
+                </div>
+              </div>
+              <button class="btn-follow">Follow</button>
+              
+              
+            </div>
+          </div>
+        </div>
+
+    </section>
+  </main>
+
+  <section class="tab-bar">
+    <a href="../home/index.html"><img src="../assets/icon/home-icon.png" class="action-icon" alt="" /></a>
+    <a href="../search/index.html"><img src="../assets/icon/search-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="" /></a>
+    <a href="../likes/index.html"><img src="../assets/icon/like-icon.png" class="action-icon" alt="" /></a>
+    <a href="../profile/index.html"><img src="../assets/icon/user-icon.png" class="action-icon" alt="" /></a>
+  </section>
+</body>
+
 </html>
