Finished profile page

--- a/search/index.html
+++ b/search/index.html
@@ -45,6 +45,21 @@
       <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
       <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
       <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
+      <img class="feed-img" src="https://picsum.photos/124/120?random=1" alt="feed image">
     </section>
   </main>
 
