--- a/home/index.html
+++ b/home/index.html
@@ -211,7 +211,7 @@
     </main>
 
     <section class="tab-bar">
-      <a href="../home/index.html"><img src="../assets/icon/home-icon.png" class="action-icon" alt="" /></a>
+      <a href="#"><img src="../assets/icon/home-icon.png" class="action-icon" alt="" /></a>
       <a href="../search/index.html"><img src="../assets/icon/search-icon.png" class="action-icon" alt="" /></a>
       <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="" /></a>
       <a href="../likes/index.html"><img src="../assets/icon/like-icon.png" class="action-icon" alt="" /></a>
