--- a/profile/index.html
+++ b/profile/index.html
@@ -86,7 +86,7 @@
         </div>
       </div>
 
-      
+
       <div class="menu-profile">
         <div class="profile">
           <img src="../assets/icon/menu1-icon.png" alt="Menu Profile">
@@ -121,11 +121,11 @@
   </main>
 
   <section class="tab-bar">
-    <a href="../home/index.html"><img src="../assets/icon/home-icon.png" class="action-icon" alt="" /></a>
+    <a href="../home/index.html"><img src="../assets/icon/homeoff-icon.png" class="action-icon" alt="" /></a>
     <a href="../search/index.html"><img src="../assets/icon/search-icon.png" class="action-icon" alt="" /></a>
     <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="" /></a>
     <a href="../likes/index.html"><img src="../assets/icon/like-icon.png" class="action-icon" alt="" /></a>
-    <a href="../profile/index.html"><img src="../assets/icon/user-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/user-icon.png" class="action-icon" alt="" /></a>
   </section>
 </body>
 
