--- a/likes/index.html
+++ b/likes/index.html
@@ -162,10 +162,10 @@
   </main>
 
   <section class="tab-bar">
-    <a href="../home/index.html"><img src="../assets/icon/home-icon.png" class="action-icon" alt="" /></a>
+    <a href="../home/index.html"><img src="../assets/icon/homeoff-icon.png" class="action-icon" alt="" /></a>
     <a href="../search/index.html"><img src="../assets/icon/search-icon.png" class="action-icon" alt="" /></a>
     <a href="#"><img src="../assets/icon/add-icon.png" class="action-icon" alt="" /></a>
-    <a href="../likes/index.html"><img src="../assets/icon/like-icon.png" class="action-icon" alt="" /></a>
+    <a href="#"><img src="../assets/icon/likeon-icon.png" class="action-icon" alt="" /></a>
     <a href="../profile/index.html"><img src="../assets/icon/user-icon.png" class="action-icon" alt="" /></a>
   </section>
 </body>
